add jsplumb basic implementation

--- a/src/app/views/diagram/diagram.component.html
+++ b/src/app/views/diagram/diagram.component.html
@@ -16,27 +16,5 @@
   </form>
 </header>
 <main class="diagram-container">
-  @for (diagramElement of diagramElements(); track $index) {
-
-  <div
-    cdkDrag
-    cdkDragBoundary=".diagram-container"
-    class="diagram-container__card"
-  >
-    <p
-      [style.color]="diagramElement.color"
-      class="diagram-container__card__name"
-    >
-      {{ diagramElement.typeName }}
-    </p>
-    @for (field of diagramElement.fields; track $index) {
-    <div class="diagram-container__card__fields">
-      <p>{{ field }}</p>
-      <mat-form-field>
-        <input matInput />
-      </mat-form-field>
-    </div>
-    }
-  </div>
-  }
+  <ng-container #container></ng-container>
 </main>
