--- a/src/app/views/diagram/diagram.component.html
+++ b/src/app/views/diagram/diagram.component.html
@@ -14,6 +14,10 @@
       Add to diagram
     </button>
   </form>
+
+  <p>Double click - select card</p>
+  <p>Double click in selected card - unselect card</p>
+  <p>Double click in another card while card is selected - connect them</p>
 </header>
 <main class="diagram-container">
   <ng-container #container></ng-container>
