--- a/src/app/views/diagram/diagram.component.html
+++ b/src/app/views/diagram/diagram.component.html
@@ -15,9 +15,9 @@
     </button>
   </form>
 
-  <p>Double click - select card</p>
-  <p>Double click in selected card - unselect card</p>
-  <p>Double click in another card while card is selected - connect them</p>
+  <p>Double click on the card - select the card</p>
+  <p>Double click on the selected card - unselect the card</p>
+  <p>Double click on another card while card is selected - connect the cards</p>
 </header>
 <main class="diagram-container">
   <ng-container #container></ng-container>
